12/9/13 Basics: use opaque gray for disabled PHValueNode, so that wire behind it doesn't show through
12/9/13 add optional midpoint color for some solutions, rewrite algorithm for computing solution color
12/9/13 Basics: decrease length of drain pipe, move beaker slightly to the right
12/9/13 Basics: adjust pH meter wire control points so that the wire looks good when measuring the drain
12/9/13 Basics: make beaker slightly narrower so that drain faucet plunger isn't being dragged right up to edge of screen
12/9/13 Basics: move pH meter slightly right to so that we have some room to accommodate i18n of 'Neutral (7)'
12/9/13 Basics: make pH scale narrower so that we have some room to accommodate i18n of 'Neutral (7)'
12/9/13 Basics: right-justify combo box relative to faucet, so it has room to grow left for i18n
12/9/13 Basics: compute all locations using the beaker location and size
12/9/13 Basics: move 'Reset All' button to lower-right, so that it's not in the way when using pH probe to measure drain
12/9/13 Basics: reduce height of beaker and move it up, so that pH probe fits under the drain faucet
12/9/13 Basics: adjust drag bounds of pH probe
12/9/13 Basics: pH meter body is not draggable, so don't make the body a 'Movable'
12/9/13 use same line width for button border and vertical separator in combo box, sun#42
12/9/13 Basics: add rounded rectangle around '(Neutral) 7' tick label, fill with 'neutral' color
12/9/13 Basics: fix wire control points on pH meter
12/9/13 Basics: change pH tick label to '(Neutral) 7'
12/9/13 Basics: adjust location of combo box
12/9/13 Basics: adjust drag bounds for dropper, so that it's above new beaker location and doesn't overlap water faucet touchArea
12/9/13 reflect water faucet so that it points left, adjust location of 'Water' label
12/9/13 Basics: move beaker to right side of screen, move pH meter to left side of screen
12/9/13 make volume value bold